# toy-os

./: .gitignore  Makefile  README.md  bochsrc.txt  boot_sect.asm  disk_load.asm  kernel.c  linker.ld  print_string.asm
asm/: boot.asm  boot_sect.asm  gdt.asm  kernel_entry.asm  switch_to_pm.asm
asm/disk/: disk_load.asm
asm/print/: print_string.asm
boot/asm/: boot.asm  long_mode_init.asm
kernel/: Cargo.toml
kernel/src/: lib.rs  vga_buffer.rs
kernel/src/interrupts/: idt.rs  mod.rs
kernel/src/memory/: area_frame_allocator.rs  bitmap_frame_allocator.rs  mod.rs
kernel/src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
kernel/src/x86/: asm.rs  mod.rs
kernel/src/x86/asm/: mod.rs  tlb.rs
print/: print_hex.asm  print_string_pm.asm
