[package]
name = "kernel"
version = "0.0.1"
authors = ["james <LucasJ94@hotmail.co.uk>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
spin = "0.4.2"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"