[package]
name = "kernel"
version = "0.0.1"
authors = ["james <LucasJ94@hotmail.co.uk>"]

[lib]
crate-type = ["staticlib"]

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
spin = "0.4.2"
bit_field = "0.2.1"
lazy_static = { version = "0.2.1", features = ["spin_no_std"] }